[package]
name = "noproto"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "no-std, no-alloc protocol buffers implementation for embedded systems."
repository = "https://github.com/embassy-rs/noproto"
categories = [
    "embedded",
    "no-std",
    "network-programming",
    "encoding",
]
keywords = ["protobuf", "serialization"]

[features]
default = ["derive"]
derive = ["dep:noproto-derive"]

[dependencies]
heapless = "0.8"
noproto-derive = { version = "0.1.0", path = "noproto-derive", optional = true }
